--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,43 @@
+## OSX
+
 .DS_Store
+.AppleDouble
+.LSOverride
 
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
+# Icon must end with two \r
+Icon
 
-pids
-logs
-results
+# Thumbnails
+._*
 
-npm-debug.log
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
 
-node_modules
-bower_components
-test
-tests
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+## Windows
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
