Updated bower homepage URL

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "pdx-typography",
   "version": "0.0.1",
-  "homepage": "https://github.sw.ge.com/jrogerson/pdx-typography.git",
+  "homepage": "git@github.sw.ge.com:jrogerson/pdx-typography.git",
   "authors": [
     "General Electric"
   ],
