--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "px-colors-design": "git://github.sw.ge.com/pxc/px-colors-design.git#master",
+    "px-functions-design": "git://github.sw.ge.com/pxc/px-functions-design.git#master",
     "px-mixins-design": "git://github.sw.ge.com/pxc/px-mixins-design.git#master"
   }
 }
