--- a/bower.json
+++ b/bower.json
@@ -22,8 +22,6 @@
     "tests"
   ],
   "dependencies": {
-    "px-colors-design": "git://github.sw.ge.com/pxc/px-colors-design.git#master",
-    "px-functions-design": "git://github.sw.ge.com/pxc/px-functions-design.git#master",
-    "px-mixins-design": "git://github.sw.ge.com/pxc/px-mixins-design.git#master"
+    "px-functions-design": "git://github.sw.ge.com/pxc/px-functions-design.git#master"
   }
 }
