Switched inuit-defaults to px-defaults-design

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "tests"
   ],
   "dependencies": {
+    "px-defaults-design": "git://github.sw.ge.com/PXd/px-defaults-design.git#master",
     "px-functions-design": "git://github.sw.ge.com/PXd/px-functions-design.git#master",
     "px-mixins-design": "git://github.sw.ge.com/PXd/px-mixins-design.git#master"
   }
