Updated bower dependencies for semver

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-typography-design",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "homepage": "git://github.sw.ge.com/PXd/px-typography-design.git",
   "authors": [
     "General Electric"
@@ -22,8 +22,8 @@
     "tests"
   ],
   "dependencies": {
-    "px-defaults-design": "git://github.sw.ge.com/PXd/px-defaults-design.git#master",
-    "px-functions-design": "git://github.sw.ge.com/PXd/px-functions-design.git#master",
-    "px-mixins-design": "git://github.sw.ge.com/PXd/px-mixins-design.git#master"
+    "px-defaults-design": "git://github.sw.ge.com/PXd/px-defaults-design.git#~0.1.0",
+    "px-functions-design": "git://github.sw.ge.com/PXd/px-functions-design.git#~0.1.0",
+    "px-mixins-design": "git://github.sw.ge.com/PXd/px-mixins-design.git#~0.1.0"
   }
 }
