--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-typography-design",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "homepage": "git://github.build.ge.com/PXd/px-typography-design.git",
   "authors": [
     "General Electric"
@@ -22,8 +22,8 @@
     "tests"
   ],
   "dependencies": {
+    "px-colors-design": "git://github.build.ge.com/PXd/px-defaults-design.git#~0.2.0",
     "px-defaults-design": "git://github.build.ge.com/PXd/px-defaults-design.git#~0.1.0",
-    "px-functions-design": "git://github.build.ge.com/PXd/px-functions-design.git#~0.1.0",
     "px-mixins-design": "git://github.build.ge.com/PXd/px-mixins-design.git#~0.1.0"
   }
 }
