--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "px-typography-design",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Base typographic styles for Predix Experience",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.build.ge.com/PXd/px-typography-design.git"
+    "url": "https://github.build.ge.com/PXd/px-typography-design.git"
   },
   "author": "General Electric",
   "license": "Apache 2",
