--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-typography-design",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "homepage": "https://github.com/PredixDev/px-typography-design.git",
   "authors": [
     "General Electric"
@@ -17,13 +17,17 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "test",
-    "tests",
+    "sass",
+    ".github",
     "OSS_Notice.pdf"
   ],
   "dependencies": {
-    "px-colors-design": "https://github.com/PredixDev/px-colors-design.git#~0.2.0",
-    "px-defaults-design": "https://github.com/PredixDev/px-defaults-design.git#~0.2.0",
-    "px-mixins-design": "https://github.com/PredixDev/px-mixins-design.git#~0.2.0"
+    "px-colors-design": "~0.2.0",
+    "px-defaults-design": "~0.2.0",
+    "px-mixins-design": "~0.2.0"
+  },
+  "devDependencies": {
+    "px-sass-doc": "~0.2.1",
+    "px-starter-kit-design": "~0.6.0"
   }
 }
